kubernetes/homelab/apps/stalwart/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: stalwart
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "mailx.daddyshome.fr"
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: stalwart-https
  hostnames:
  - "mailx.daddyshome.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: stalwart
      port: 8080
